# ArkNix

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
config/: scenes.yaml
engine/: main.cpp
engine/audio/: audio.h  audio_locator.cpp  audio_locator.h  sdl_audio.cpp  sdl_audio.h
engine/components/: animation_component.cpp  animation_component.h  character_controller.cpp  character_controller.h  component.h  parser.h  sound_component.cpp  sound_component.h  sprite_component.cpp  sprite_component.h  text_component.cpp  text_component.h  transform.cpp  transform.h
engine/core/: Entity.h  component.h  game_object.cpp  game_object.h  ntime.h  transform.cpp  transform.h  types.h  vector2d.h
engine/core/asset_manager/: asset.h  asset_manager.cpp  asset_manager.h
engine/core/asset_manager/assets/: font.cpp  font.h  music.cpp  music.h  sound.cpp  sound.h  sprite.cpp  sprite.h
engine/core/asset_manager/sprites/: sprite.cpp  sprite.h
engine/core/events/: action.h
engine/core/os/: windows.h
engine/game/: game.cpp  game.h  scene.cpp  scene.h  scene_manager.cpp  scene_manager.h
engine/graphics/: color.h  renderer.h  renderer_locator.cpp  renderer_locator.h  sdl_renderer.cpp  sdl_renderer.h
engine/graphics/sprites/: sprite.cpp  sprite.h
engine/input/: input.h  input_locator.cpp  input_locator.h  keyboard.cpp  keyboard.h  sdl_input.cpp  sdl_input.h
engine/math/: nMath.h  vector2d.h
engine/physics2d/: collision_detector.cpp  collision_detector.h  collision_layer.h
game/: galaga.cpp  galaga.h  main.cpp
game/components/: bullet.cpp  bullet.h  bullet_controller.cpp  bullet_controller.h  debug_component.h  enemies_manager.cpp  enemies_manager.h  enemy_bullet_controller.cpp  enemy_bullet_controller.h  parse_components.h  player_controller.cpp  player_controller.h  selection_cursor.cpp  selection_cursor.h
game/player/: player_data.h
scenes/: Level1.yaml  Level2.yaml  Level3.yaml  Level4.yaml  Menu.yaml  Scene1.yaml  Scene2.yaml
